--- a/ConanApp/app/src/main/res/values/styles.xml
+++ b/ConanApp/app/src/main/res/values/styles.xml
@@ -1,11 +1,21 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary" tools:ignore="DuplicateDefinition">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <!--<item name="android:statusBarColor" tools:ignore="NewApi">@color/colorPrimaryDark</item>-->
+        <!--<item name="android:navigationBarColor" tools:ignore="NewApi">@color/colorPrimaryDark</item>-->
+        <!--<item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:statusBarColor" tools:ignore="DuplicateDefinition,NewApi">@android:color/transparent</item>
+        <item name="android:navigationBarColor" tools:ignore="DuplicateDefinition,NewApi">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>-->
     </style>
 
 </resources>
