--- a/ConanApp/app/src/main/res/layout/activity_main.xml
+++ b/ConanApp/app/src/main/res/layout/activity_main.xml
@@ -6,27 +6,69 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/send_button"
-        android:text="Send Message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="142dp"
-        android:layout_marginStart="142dp"
-        android:layout_marginBottom="96dp"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="414dp"
+        android:layout_height="89dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
 
-    <TextView
-        android:id="@+id/receive_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Receive Message"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.625" />
+        <com.john.waveview.WaveView
+            android:id="@+id/wave_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#00FFFFFF"
+            android:alpha="100"
+            android:visibility="visible"
+            android:backgroundTintMode="src_atop"
+            android:backgroundTint="#00574B"
+            android:elevation="0dp"
+            android:fadingEdgeLength="0dp"
+            app:above_wave_color="@color/colorPrimaryDark"
+            app:blow_wave_color="@color/colorPrimaryDark"
+            app:progress="85"
+            app:wave_height="little"
+            app:wave_hz="fast"
+            app:wave_length="little">
+
+        </com.john.waveview.WaveView>
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/bottom_nav_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:foregroundTint="#00FFFFFF"
+        android:fadingEdgeLength="8dp"
+        android:elevation="8dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="205dp">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="#00FFFFFF"
+            android:foregroundTint="#00FFFFFF"
+            android:backgroundTint="#00FFFFFF"
+            android:visibility="visible"
+            android:foreground="@android:color/transparent"
+            android:scrollbarThumbHorizontal="@android:color/transparent"
+            android:scrollbarThumbVertical="@android:color/transparent"
+            android:scrollbarTrackHorizontal="@android:color/transparent"
+            android:scrollbarTrackVertical="@android:color/transparent"
+            android:elevation="0dp"
+            app:backgroundTint="#00FFFFFF"
+            app:elevation="0dp"
+            app:itemBackground="@android:color/transparent"
+            app:itemIconTint="@android:color/transparent"
+            app:itemTextColor="@color/white"
+            app:menu="@menu/bottom_navigation_menu">
+
+        </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
