--- a/ConanApp/app/src/main/res/layout/activity_main.xml
+++ b/ConanApp/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.625" />
 
+    <com.hero.elias.conanapp.views.DrawView
+        android:id="@+id/view_draw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
