--- a/ConanApp/app/src/main/res/layout/activity_main.xml
+++ b/ConanApp/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,20 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:id="@+id/bottom_nav_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:foregroundTint="#00FFFFFF"
+        android:fadingEdgeLength="8dp"
+        android:elevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </FrameLayout>
+
+    <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="414dp"
         android:layout_height="89dp"
@@ -54,24 +68,12 @@
         app:elevation="0dp"
         app:itemBackground="@android:color/transparent"
         app:itemIconTint="@android:color/transparent"
-        app:itemTextColor="@color/white"
+        app:itemTextColor="#282828"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_navigation_menu">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
-
-    <FrameLayout
-        android:id="@+id/bottom_nav_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:foregroundTint="#00FFFFFF"
-        android:fadingEdgeLength="8dp"
-        android:elevation="8dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="205dp">
-
-    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
