--- a/ConanApp/app/src/main/res/layout/fragment_visualization.xml
+++ b/ConanApp/app/src/main/res/layout/fragment_visualization.xml
@@ -6,20 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.hero.elias.conanapp.MyView
-        android:id="@+id/myView"
+    <com.hero.elias.conanapp.VisualizationView
+        android:id="@+id/visualization_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#00FFFFFF"
         android:backgroundTint="#00FFFFFF" />
-
-    <ImageView
-        android:id="@+id/visualization_imageview"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:src="@drawable/icons8_graph_128px"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/icons8_graph_128px" />
 
 </FrameLayout>
