--- a/ConanApp/app/src/main/res/values/attrs.xml
+++ b/ConanApp/app/src/main/res/values/attrs.xml
@@ -1,5 +1,5 @@
 <resources>
-    <declare-styleable name="MyView">
+    <declare-styleable name="VisualizationView">
 
     </declare-styleable>
 </resources>
