Removed test from navigation icons, cleanup colors and strings xmls

--- a/ConanApp/app/src/main/res/layout/activity_main.xml
+++ b/ConanApp/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,9 @@
         android:id="@+id/bottom_nav_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:foregroundTint="#00FFFFFF"
-        android:fadingEdgeLength="8dp"
-        android:elevation="8dp"
+        android:foregroundTint="@color/transparent"
+        android:fadingEdgeLength="0dp"
+        android:elevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,11 +32,11 @@
             android:id="@+id/wave_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#00FFFFFF"
+            android:background="@color/transparent"
             android:alpha="100"
             android:visibility="visible"
             android:backgroundTintMode="src_atop"
-            android:backgroundTint="#00574B"
+            android:backgroundTint="@color/transparent"
             android:elevation="0dp"
             android:fadingEdgeLength="0dp"
             app:above_wave_color="@color/colorPrimaryDark"
@@ -54,20 +54,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="#00FFFFFF"
-        android:foregroundTint="#00FFFFFF"
-        android:backgroundTint="#00FFFFFF"
+        android:background="@color/transparent"
+        android:foregroundTint="@color/transparent"
+        android:backgroundTint="@color/transparent"
         android:visibility="visible"
-        android:foreground="@android:color/transparent"
+        android:foreground="@color/transparent"
         android:scrollbarThumbHorizontal="@android:color/transparent"
         android:scrollbarThumbVertical="@android:color/transparent"
         android:scrollbarTrackHorizontal="@android:color/transparent"
         android:scrollbarTrackVertical="@android:color/transparent"
         android:elevation="0dp"
-        app:backgroundTint="#00FFFFFF"
+        app:backgroundTint="@color/transparent"
         app:elevation="0dp"
-        app:itemBackground="@android:color/transparent"
-        app:itemTextColor="#282828"
+        app:itemBackground="@color/transparent"
+        app:itemIconSize="32dp"
+        app:itemTextAppearanceActive="@style/navTextActive"
+        app:itemTextAppearanceInactive="@style/navTextInactive"
+        app:itemTextColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
