--- a/ConanApp/app/src/main/res/values/colors.xml
+++ b/ConanApp/app/src/main/res/values/colors.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF9800</color>
-    <color name="colorPrimaryDark">#FF5722</color>
-    <color name="colorNavigationBar">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#FF5722</color>
+    <color name="colorPrimaryDark">#E64A19</color>
+
+    <color name="colorAccent">#00BCD4</color>
+    <color name="colorAccentDark">#0097A7</color>
+
+    <color name="colorText">#898989</color>
+    <color name="colorTextSelected">#545454</color>
+
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="grey">#7F7F7F</color>
+
+    <color name="transparent">#00000000</color>
+
+
+
 </resources>
