send x and y too bluetooth in a correct way

--- a/ConanApp/app/src/main/res/layout/fragment_command.xml
+++ b/ConanApp/app/src/main/res/layout/fragment_command.xml
@@ -10,17 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/send_button"
-            android:text="Send Message"
+        <TextView
+            android:id="@+id/receive_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="142dp"
-            android:layout_marginStart="142dp"
-            android:layout_marginBottom="96dp"
+            android:text="Receive Message"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.044" />
 
         <TextView
             android:id="@+id/receive_text"
@@ -105,6 +105,8 @@
             app:layout_constraintTop_toTopOf="parent">
 
         </RelativeLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
