--- a/ConanApp/app/src/main/res/layout/fragment_command.xml
+++ b/ConanApp/app/src/main/res/layout/fragment_command.xml
@@ -20,18 +20,6 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.044" />
-
-        <TextView
-            android:id="@+id/receive_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Receive Message"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.713" />
 
         <TextView
@@ -93,6 +81,22 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/distance"
             app:layout_constraintVertical_bias="0.012" />
+
+
+        <Button
+            android:id="@+id/toggle_btn"
+            android:layout_width="208dp"
+            android:layout_height="82dp"
+            android:background="@drawable/custom_button"
+            android:text="Automatic"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            app:layout_constraintBottom_toTopOf="@+id/JoystickBackground"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.867"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.157" />
 
         <RelativeLayout
             android:layout_width="180dp"
