--- a/ConanApp/app/src/main/res/layout/fragment_session.xml
+++ b/ConanApp/app/src/main/res/layout/fragment_session.xml
@@ -12,8 +12,8 @@
         android:layout_height="50dp"
         android:layout_marginBottom="200dp"
         android:ems="10"
+        android:hint="@string/Name"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
