--- a/ConanApp/app/src/main/res/layout/fragment_command.xml
+++ b/ConanApp/app/src/main/res/layout/fragment_command.xml
@@ -22,73 +22,13 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.713" />
 
-        <TextView
-            android:id="@+id/x_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="X : 0"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.041"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.06" />
-
-        <TextView
-            android:id="@+id/y_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Y : 0"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.041"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/x_value"
-            app:layout_constraintVertical_bias="0.016" />
-
-        <TextView
-            android:id="@+id/angle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Angle :"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.043"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/x_value"
-            app:layout_constraintVertical_bias="0.069" />
-
-        <TextView
-            android:id="@+id/distance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Distance : "
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.046"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/y_value"
-            app:layout_constraintVertical_bias="0.069" />
-
-        <TextView
-            android:id="@+id/direction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Direction : "
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.046"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/distance"
-            app:layout_constraintVertical_bias="0.012" />
-
 
         <Button
             android:id="@+id/toggle_btn"
             android:layout_width="208dp"
             android:layout_height="82dp"
             android:background="@drawable/custom_button"
-            android:text="Automatic"
+            android:text="AUTOMATIC"
             android:textColor="@color/white"
             android:textSize="30dp"
             app:layout_constraintBottom_toTopOf="@+id/JoystickBackground"
