--- a/ConanApp/app/src/main/res/layout/fragment_home.xml
+++ b/ConanApp/app/src/main/res/layout/fragment_home.xml
@@ -65,7 +65,7 @@
             android:text="@string/createSession"
             android:textAlignment="viewStart"
             android:textColor="@color/white"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
