--- a/ConanApp/app/src/main/res/layout/fragment_session.xml
+++ b/ConanApp/app/src/main/res/layout/fragment_session.xml
@@ -47,6 +47,7 @@
         android:layout_marginTop="30dp"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_dark"
+        android:textSize="35dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/sessionText"
         app:layout_constraintHorizontal_bias="0.0"
